--- a/WrenchPlugin.Model/WrenchPlugin.Model.csproj
+++ b/WrenchPlugin.Model/WrenchPlugin.Model.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parameter.cs" />
     <Compile Include="WrenchBuilder.cs" />
     <Compile Include="KompasConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
